--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.5
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
