--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,29 @@
 # .github/workflows/release.yml
+
+on:
+  release:
+    types: [created]
+
 jobs:
   release:
-    name: Release - ${{ matrix.platform.release_for }}
+    name: release ${{ matrix.target }}
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        platform:
-          - os_name: Linux-x86_64
-            os: ubuntu-24.04
-            target: x86_64-unknown-linux-musl
-
-          - os_name: macOS-x86_64
-            os: macOS-latest
-            target: x86_64-apple-darwin
-
-            # more release targets here ...
-
-    runs-on: ${{ matrix.platform.os }}
+        include:
+          - target: x86_64-pc-windows-gnu
+            archive: zip
+          - target: x86_64-unknown-linux-musl
+            archive: tar.gz tar.xz tar.zst
+          - target: x86_64-apple-darwin
+            archive: zip
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Build executable
-        uses: houseabsolute/actions-rust-cross@v0
+      - uses: actions/checkout@master
+      - name: Compile and release
+        uses: rust-build/rust-build.action@v1.4.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          target: ${{ matrix.platform.target }}
-          args: "--locked --release"
-          strip: true
-      - name: Publish artifacts and release
-        uses: houseabsolute/actions-rust-release@v0
-        with:
-          executable-name: phcalc
-          target: ${{ matrix.platform.target }}
-        if: matrix.toolchain == 'stable'
+          RUSTTARGET: ${{ matrix.target }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
