--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,10 @@ jobs:
           - build: macos
             os: macos-latest
             target: aarch64-apple-darwin # x86_64-apple-darwin
+            
+          - build: macx86
+            os: macos-latest
+            target: x86_64-apple-darwin
 
           - build: windows
             os: windows-latest
