--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,19 +16,18 @@ jobs:
 
     strategy:
       matrix:
-        # You can add more, for any target you'd like!
         include:
           - build: linux
             os: ubuntu-latest
-            target: x86_64-unknown-linux-musl
+            target: x86_64-unknown-linux-gnu # x86_64-unknown-linux-musl
 
           - build: macos
             os: macos-latest
             target: aarch64-apple-darwin # x86_64-apple-darwin
             
-          - build: macx86
-            os: macos-latest
-            target: x86_64-apple-darwin
+          # - build: macx86
+          #   os: macos-latest
+          #   target: x86_64-apple-darwin
 
           - build: windows
             os: windows-latest
